# derad-agent

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  TODO.md  azure.yaml  bibliography.bib  paper.tex  pyproject.toml  renderinput.json  requirements.txt  setup.py  study.md
.claude/: settings.json
.claude/agents/: factcheck-pipeline-reviewer.md  x-api-shape-auditor.md
.claude/hooks/: block_sensitive_writes.py  pytest_related.py
.github/workflows/: tests.yml
agent/: __init__.py  agent_design.md
agent/app/: app.py  dedup.py  events.py  metrics.py  participants.py  streamer.py  survey.py  utils.py
agent/cli/: ask.py  (+8 more)
data/: checksums.sha256  manifest.json
data_analysis/: daily_survey.ipynb
derad_agent/: __init__.py  utils.py
docs/: architecture.md  azure_deployment_plan.html  conditions.md  data_dictionary.html  database-schema.md  design-note-parity-v0.6.md  design-review-2026-07-10.md  grant-slides-plan.html  interface_azure_deployment.md  onboarding.html  pipeline.html  plan_may11.html  prompt_review.html  render-inputs.html  render-inputs.md  system_design.html  test-plan.html  tone-invariance-check-2026-07-10.md  trace-5ab21772.md  trace.html  v07-validation-2026-07-10.md  v12s-playbook.md  x-app-recreation-plan.html  x-integration-guide.md
indexes/: README.md
infra/: main.bicep  main.parameters.json
mock-x/: api.js  index.html
mockx/: README.md  build_db.py  db.py  extract_notes.py  server.py  setup_db.sh
paper/: main.tex
post_selection/: keywords.py  main.py  post_assignment.py  utils.py
scripts/: backfill_self_replies.py  batch_generate_replies.py  grant-access.sh  migrate_freezes.py  probe_claude_backend.py  probe_claude_web_search.py  probe_refusal_variants.py  probe_web_search.py  refresh_source_lists.py  replay_mentions.py  reply.py  run_local.py  seed_keyvault.sh  setup-env.sh  smoke_test.py  smoke_test.sh  test_webhook.py  verify_x_creds.py  x-oauth-pin.py
secrets/: readme.txt
study/: README.md
tests/: conftest.py  test_anthropic_timeout_fallback.py  test_api_participants.py  test_app_phase1.py  test_audit_quote_url_exclusion.py  test_audit_url_scan.py  test_batch_generate_replies_db.py  test_bot_thread_guard.py  test_collect_replies.py  test_daily_summary.py  test_dashboard_engagement_order.py  test_dedup_tables.py  test_engagement_clicks.py  test_events.py  test_fetch_image_bytes_streaming_cap.py  test_info_token_size.py  test_info_views.py  test_landscape_agent.py  test_link_reply_outcome.py  test_list_participants.py  test_llm_config.py  test_markdown_links.py  test_metrics.py  test_misleadingness.py  test_mockx_build_db.py  test_mockx_db.py  test_mockx_extract.py  test_mockx_fetch_media.py  test_mockx_server.py  test_participants.py  test_pipeline_audit_fail.py  test_pipeline_overall_state.py  test_pipeline_queue_timeout_drop.py  test_poll_engagement.py  test_poller.py  test_post_assignment.py  test_reconcile_metrics.py  test_reconcile_perspectives_sync.py  test_register_participant.py  test_relevance_filter.py  (+29 more)
tsv_generation/: .gitignore  analyze_viewpoint.py  selected_posts.csv  selected_posts_replies.csv
(+191 files in other folders)
