[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["derad_agent*"]

[tool.setuptools.package-data]
"derad_agent.app" = ["templates/*.html", "static/*.css"]

[project]
name = "derad-agent"
version = "2.0.0"
description = "Retrieve Community Notes at scale and respond to any claim with evidence-backed reasoning."
authors = [{name = "Advait MB"}]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "langchain>=0.1.16",
    "langchain-openai>=0.0.5",
    "openai>=1.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "numpy>=1.24",
    "Flask>=3.1.3",
    "xdk>=0.9.0",
    "gunicorn>=21.2.0",
    "azure-data-tables>=12.5",
    "azure-identity>=1.18",
    "azure-monitor-opentelemetry>=1.6",
]

[project.scripts]
derad-embed-notes = "derad_agent.cli.embed_notes:main"
derad-ask = "derad_agent.cli.ask:main"
derad-webhooks = "derad_agent.cli.webhooks:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
