[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.setuptools.package-data]
"agent.app" = ["templates/*.html", "static/*.css", "static/dash/*"]

[project]
name = "derad-agent"
version = "3.0.0"
description = "Web-evidence fact-checking bot for X (research instrument)."
authors = [{name = "Advait MB"}]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "langchain>=0.1.16",
    "langchain-anthropic>=1.4.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "Flask>=3.1.3",
    "xdk>=0.9.0",
    "gunicorn>=21.2.0",
    "azure-data-tables>=12.5",
    "azure-identity>=1.18",
    "azure-monitor-opentelemetry>=1.6",
]

[project.scripts]
derad-factcheck = "agent.factcheck.__main__:main"
derad-poll-engagement = "agent.cli.poll_engagement:main"
derad-export = "agent.cli.export:main"
derad-register-participant = "agent.cli.register_participant:main"
derad-list-participants = "agent.cli.list_participants:main"
derad-bulk-register = "agent.cli.bulk_register:main"
derad-collect-replies = "agent.cli.collect_replies:main"
derad-daily-summary = "agent.cli.daily_summary:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
